# autoencoder-identity

./: .gitignore  checkpoint.py  config.py  data.py  inspect_weights.py  model.py  pyproject.toml  smoke.py  train.py
configs/: default.yaml  identity.yaml  low_rank.yaml  vae.yaml
