[project]
name = "ae-identity"
version = "0.0.0"
description = "Tiny autoencoder experiments in JAX: linear AE -> nonlinear -> VAE."
requires-python = ">=3.14"
dependencies = [
    "jax[cuda12]",
    "optax",
    "numpy",
    "tyro",
    "orbax-checkpoint",
    "pyyaml",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 80
target-version = "py314"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "I", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
